--- a/BE/package.json
+++ b/BE/package.json
@@ -20,9 +20,11 @@
   "homepage": "https://github.com/Avraham-K/geoguessr-BE---group-project#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^2.3.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
