--- a/FE/geo-guesser-group-project/package.json
+++ b/FE/geo-guesser-group-project/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^7.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-countdown-circle-timer": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
